--- a/landings/midesafe/style.css
+++ b/landings/midesafe/style.css
@@ -56,10 +56,21 @@ span {
 }
 
 #banner {
-  background: url(img/bg.png);
-  background-position: center center;
+  background: url(img/bg2.jpg);
+  background-position: bottom center;
   background-size: cover;
   height: 400px;
+  position: relative;
+  z-index: 9;
+}
+#banner::before {
+ content: "";
+ position: absolute;
+ top: 0;
+ left: 0;
+ right: 0;
+bottom: 0;
+background: rgba(0, 0, 0, .5);
 }
 #banner2 {
   background-color: #0b1a32;
@@ -118,4 +129,8 @@ footer {
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
   color: #82af44;
+}
+
+.z-index{
+  z-index: 9;
 }
